feat: add middleware which checks if user is authenticated
